--- a/package.json
+++ b/package.json
@@ -32,5 +32,13 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.8"
+  },
+  "overrides": {
+    "react-slidedown": {
+      "react": "$react"
+    }
+  },
+  "resolutions": {
+    "react-slidedown/react": "^18.3.1"
   }
 }
